--- a/Site Institucional/Estático/PaginaInicial/home.html
+++ b/Site Institucional/Estático/PaginaInicial/home.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="tlou1.css">
     <link rel="stylesheet" href="tlou2.css">
     <link rel="stylesheet" href="tlouhbo.css">
+    <link rel="stylesheet" href="../cssglobal/headerglobal.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
