--- a/Site Institucional/Estático/PaginaTLOU1/tlou1.html
+++ b/Site Institucional/Estático/PaginaTLOU1/tlou1.html
@@ -8,6 +8,7 @@
     <title>The Last of Us Part I | TLOUHub</title>
     <link rel="stylesheet" href="./tlou1.css">
     <link rel="stylesheet" href="tlou1header.css">
+    <link rel="stylesheet" href="mediaquerys.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -103,8 +104,8 @@
                 <span id="conteudoHistoria2">
                     Conheça a história emocionante e os personagens inesquecíveis de The Last of Us™, vencedor de mais de 200 prêmios de Jogo do Ano.
 
-Em uma civilização devastada, em que infectados e sobreviventes veteranos estão à solta, Joel, um protagonista abatido, é contratado para tirar uma garota de 14 anos, Ellie, de uma zona de quarentena militar. No entanto, o que começa como um pequeno serviço se transforma em uma jornada brutal através do país.
-Em uma civilização devastada, em que infectados e sobreviventes veteranos estão à solta, Joel, um protagonista abatido, é contratado para tirar uma garota de 14 anos, Ellie, de uma zona de quarentena militar. No entanto, o que começa como um pequeno serviço se transforma em uma jornada brutal através do país.</span>
+                    Em uma civilização devastada, em que infectados e sobreviventes veteranos estão à solta, Joel, um protagonista abatido, é contratado para tirar uma garota de 14 anos, Ellie, de uma zona de quarentena militar. No entanto, o que começa como um pequeno serviço se transforma em uma jornada brutal através do país.
+                   </span>
             </span>
         </div>
 
