Atualização pagina TLOU1

--- a/Site Institucional/Estático/PaginaInicial/home.html
+++ b/Site Institucional/Estático/PaginaInicial/home.html
@@ -106,7 +106,7 @@
     </div>
 
     <!-- Blocos do Banner -->
-    <div class="blocoHistoriaGradiente">
+    <div class="blocoHistoriaGradiente" id="HistoriaClick">
         <div class="blocoHistoria"></div>
         <span id="blocoHistoriaTexto">história</span>
     </div>
