--- a/Site Institucional/Estático/PaginaTLOU1/tlou1.html
+++ b/Site Institucional/Estático/PaginaTLOU1/tlou1.html
@@ -147,7 +147,11 @@
                 <span id="criadoraImagem"></span>
         </div>
 
+        <div class="personagensGradiente"></div>
+        <div class="personagensImagem"></div>
         <div class="a">a</div>
+
+
 
     </div>
 
