Atualização pagina TLOU1

--- a/Site Institucional/Estático/PaginaTLOU1/tlou1.html
+++ b/Site Institucional/Estático/PaginaTLOU1/tlou1.html
@@ -153,70 +153,77 @@
             <span id="criadoraImagem"></span>
         </div>
 
-        <div class="personagemContainer">
-            <div class="personagens">
-                <div class="slide ativa">
+        <div class="vocesabia">
+            <div class="textos">
+                <span id="vocesabiaTitulo">VOCÊ SABIA QUE:</span>
+                <span id="vocesabiaTexto">A aparência de Joel, um dos protagonistas do jogo, foi inspirada no ator escocês Gerard Butler. O diretor criativo do jogo, Neil Druckmann, disse que Butler tinha a aparência bruta e masculina que eles procuravam para o personagem. Além disso, a atriz Eliot Page também foi uma das inspirações para a criação de Ellie, a outra protagonista do jogo, mas mais tarde, a personagem foi redesenhada para evitar semelhanças com Page.</span>
+                <span id="vocesabiaTexto2">A aparência de Joel, um dos protagonistas do jogo, foi inspirada no ator escocês Gerard Butler. O diretor criativo do jogo, Neil Druckmann, disse que Butler tinha a aparência bruta e masculina que eles procuravam para o personagem. Além disso, a atriz Eliot Page também foi uma das inspirações para a criação de Ellie, a outra protagonista do jogo, mas mais tarde, a personagem foi redesenhada para evitar semelhanças com Page.</span>
+            </div>
 
-                    <div class="ellieGradiente"></div>
-                    <div class="ellieImagem"></div>
+            <div class="blocosVocesabia"></div>
+                
+        </div>
+    </div>
 
-                    <div class="ellieflechaProximo">
-                        <span class="material-symbols-outlined" id="personagemProximo">
-                            arrow_forward_ios
-                        </span>
-                    </div>
+    <div class="personagemContainer">
+        <div class="personagens">
+            <div class="slide ativa">
 
-                    <div class="ellieTipo">
-                        <span id="ellieTitulo">PROTAGONISTA</span>
-                        <span id="ellieTexto">ELLIE WILLIAMS</span>
-                    </div>
-                    <div class="ellieDescricao">
-                        <span id="descricao1">Ellie Williams é uma das personagens principais da franquia de jogos
-                            eletrônicos "The Last of Us", desenvolvida pela Naughty Dog. Ela é introduzida no primeiro
-                            jogo como uma adolescente de 14 anos que vive em um mundo pós-apocalíptico onde a maioria da
-                            população foi transformada em zumbis canibais conhecidos como infectados.</span>
-                        <span id="descricao2"> Ellie é uma personagem complexa e interessante, com uma história de vida
-                            difícil. Ela é inteligente, corajosa e astuta, e se mostra capaz de sobreviver em um mundo
-                            extremamente perigoso. Durante o jogo, ela e Joel, o outro personagem principal, desenvolvem
-                            um forte vínculo emocional, enfrentando juntos diversos desafios e perigos.</span>
-                    </div>
+                <div class="ellieGradiente"></div>
+                <div class="ellieImagem"></div>
+
+                <div class="ellieflechaProximo">
+                    <span class="material-symbols-outlined" id="personagemProximo">
+                        arrow_forward_ios
+                    </span>
                 </div>
 
+                <div class="ellieTipo">
+                    <span id="ellieTitulo">PROTAGONISTA</span>
+                    <span id="ellieTexto2">ELLIE WILLIAMS</span>
+                </div>
+                <div class="ellieDescricao">
+                    <span id="descricao1">Ellie Williams é uma das personagens principais da franquia de jogos
+                        eletrônicos "The Last of Us", desenvolvida pela Naughty Dog. Ela é introduzida no primeiro
+                        jogo como uma adolescente de 14 anos que vive em um mundo pós-apocalíptico onde a maioria da
+                        população foi transformada em zumbis canibais conhecidos como infectados.</span>
+                    <span id="descricao2"> Ellie é uma personagem complexa e interessante, com uma história de vida
+                        difícil. Ela é inteligente, corajosa e astuta, e se mostra capaz de sobreviver em um mundo
+                        extremamente perigoso. Durante o jogo, ela e Joel, o outro personagem principal, desenvolvem
+                        um forte vínculo emocional, enfrentando juntos diversos desafios e perigos.</span>
+                </div>
+            </div>
 
-                <div class="slide">
-                    <div class="joelGradiente"></div>
-                    <div class="joelImagem"></div>
 
-                    <div class="joelFlecha">
-                        <span class="material-symbols-outlined" id="personagemAnterior">
-                            arrow_forward_ios
-                        </span>
-                        <span class="material-symbols-outlined" id="personagemProximo">
-                            arrow_forward_ios
-                        </span>
-                    </div>
+            <div class="slide">
+                <div class="joelGradiente"></div>
+                <div class="joelImagem"></div>
 
-                    <div class="joelTipo">
-                        <span id="joelTitulo">PROTAGONISTA</span>
-                        <span id="joelTexto">JOEL MILLER</span>
-                    </div>
-                    <div class="joelDescricao">
-                        <span id="descricao1">Ellie Williams é uma das personagens principais da franquia de jogos
-                            eletrônicos "The Last of Us", desenvolvida pela Naughty Dog. Ela é introduzida no primeiro
-                            jogo como uma adolescente de 14 anos que vive em um mundo pós-apocalíptico onde a maioria da
-                            população foi transformada em zumbis canibais conhecidos como infectados.</span>
-                        <span id="descricao2"> Ellie é uma personagem complexa e interessante, com uma história de vida
-                            difícil. Ela é inteligente, corajosa e astuta, e se mostra capaz de sobreviver em um mundo
-                            extremamente perigoso. Durante o jogo, ela e Joel, o outro personagem principal, desenvolvem
-                            um forte vínculo emocional, enfrentando juntos diversos desafios e perigos.</span>
-                    </div>
+                <div class="joelFlecha">
+                    <span class="material-symbols-outlined" id="personagemAnterior">
+                        arrow_forward_ios
+                    </span>
+                    <span class="material-symbols-outlined" id="personagemProximo">
+                        arrow_forward_ios
+                    </span>
+                </div>
+
+                <div class="joelTipo">
+                    <span id="joelTitulo">PROTAGONISTA</span>
+                    <span id="joelTexto2">JOEL MILLER</span>
+                </div>
+                <div class="joelDescricao">
+                    <span id="descricao1">Ellie Williams é uma das personagens principais da franquia de jogos
+                        eletrônicos "The Last of Us", desenvolvida pela Naughty Dog. Ela é introduzida no primeiro
+                        jogo como uma adolescente de 14 anos que vive em um mundo pós-apocalíptico onde a maioria da
+                        população foi transformada em zumbis canibais conhecidos como infectados.</span>
+                    <span id="descricao2"> Ellie é uma personagem complexa e interessante, com uma história de vida
+                        difícil. Ela é inteligente, corajosa e astuta, e se mostra capaz de sobreviver em um mundo
+                        extremamente perigoso. Durante o jogo, ela e Joel, o outro personagem principal, desenvolvem
+                        um forte vínculo emocional, enfrentando juntos diversos desafios e perigos.</span>
                 </div>
             </div>
         </div>
-
-
-    </div>
-
     </div>
 
 
