Finalização da pagina de TLOU, criação da pagina de cadastro

--- a/Site Institucional/Estático/PaginaInicial/carrossel teste/tlou1.html
+++ b/Site Institucional/Estático/PaginaInicial/carrossel teste/tlou1.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Last of Us Part I | TLOUHub</title>
     <link rel="stylesheet" href="./tlou1.css">
-    <link rel="stylesheet" href="./tlou1headerfixa.css">
     <link rel="stylesheet" href="tlou1header.css">
     <link rel="stylesheet" href="mediaquerys.css">
     <link rel="stylesheet"
@@ -25,7 +24,7 @@
                 <div id="textonavbar">
 
                     <div class="homepage">
-                        <span id="homepagetextoInfinito">Home</span>
+                        <span id="homepagetexto">Home</span>
                     </div>
 
                     <div class="noticias">
@@ -172,14 +171,8 @@
                 <span id="vejaCordycepsGradiente">CORDYCEPS</span>
                 <span id="vejaCordycepsImagem"></span>
             </div>
+                
         </div>
-
-        <!-- FOOTER-->
-        <div class="footer">
-            <span id="footerTexto">Copyright © 2023 - 2023 TLHUB. Todos os direitos reservados. | Termos de uso | Política
-                de privacidade | Definições de cookies</span>
-        </div>
-     
     </div>
 
 
@@ -244,7 +237,6 @@
             </div>
         </div>
     </div>
-
 
 
 </body>
