Atualizacao Login e Cadastro

--- a/Site Institucional/Estático/PaginaInicial/home.html
+++ b/Site Institucional/Estático/PaginaInicial/home.html
@@ -71,9 +71,13 @@
                     </div>
 
                     <div class="jogos">
-                        <span id="jogostexto">Jogos <span class="material-symbols-outlined" id="iconNavbar">
+                        <span id="jogostexto">Jogos<span class="material-symbols-outlined" id="iconNavbar">
                                 arrow_drop_down
                             </span>
+                        </span>
+                            <div class="listaJogos">
+                                <span id="valor1">The Last of Us Part I</span>
+                            </div>
 
                     </div>
 
@@ -86,6 +90,15 @@
 
                     </div>
                     </span>
+                </div>
+                
+                <div class="login">
+                    <span id="logintexto">Entrar</span>
+                </div>
+
+                <div class="cadastrar">
+                    <span id="naoTem">NÃO TEM CONTA?</span>
+                    <span id="cadastrartexto">CADASTRE-SE</span>
                 </div>
             </div>
         </div>
