--- a/site/public/Login/login.html
+++ b/site/public/Login/login.html
@@ -45,7 +45,7 @@
             
             <input id="senha" type="password" placeholder="Senha">
 
-            <span class="msgErro"></span>
+            <span id="msgErro"></span>
             <span id="criarConta" onclick="entrar()">Entrar</span>
         </div>
 
