--- a/site/public/PaginaInicial/home.html
+++ b/site/public/PaginaInicial/home.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="tlou1.css">
     <link rel="stylesheet" href="tlou2.css">
     <link rel="stylesheet" href="./mediaquery.css">
+    <script src="../js/funcoes.js"></script>
     <link rel="stylesheet" href="tlouhbo.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
-<body>
+<body onload="validarSessao()">
 
     <!-- Header Fixa -->
     <div id='headerinfinitaFundo'>
@@ -87,14 +88,19 @@
                     </div>
                     </span>
                 </div>
-                
-                <div class="login">
+
+
+                <div class="login" id="login_botao">
                     <span id="logintexto">Entrar</span>
                 </div>
 
-                <div class="cadastrar">
+                <div class="cadastrar" id="cadastro_botao">
                     <span id="naoTem">NÃO TEM CONTA?</span>
                     <span id="cadastrartexto">CADASTRE-SE</span>
+                </div>
+
+                <div class="conta" id="conta_botao">
+                    <span id="contatexto">Sair</span>
                 </div>
             </div>
         </div>
