--- a/site/public/Login/login.html
+++ b/site/public/Login/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./login.css">
-    <script src="./js/funcoes.js"></script>
+    <script src="../js/funcoes.js"></script>
     <title>Login | TLOUHub</title>
 </head>
 <body>
