Pagina de Noticias, design finalizado

--- a/site/public/Noticias/noticia.html
+++ b/site/public/Noticias/noticia.html
@@ -100,25 +100,30 @@
         <div class="noticiasTodas">
             <div class="noticiaEsquerda">
                 <span id="imagemNoticiaGradiente"></span>
-                <span id="imagemNoticia">
-
-                </span>
+                <span id="imagemNoticia"></span>
+                <span id="imagemNoticiaTopico">Atualizações</span>
+                <span id="imagemNoticiaTitulo">The Last of Us: Part I ganha update 1.0.5 no PC com novas otimizações</span>
             </div>
 
             <div class="noticiaDireita">
                 <div class="noticiaCima">
                     <span id="imagemNoticia2Gradiente"></span>
                     <span id="imagemNoticia2"></span>
+                    <span id="imagemNoticia2Topico">Atualizações</span>
+                    <span id="imagemNoticia2Titulo">The Last of Us: Part I ganha update 1.0.5 no PC com novas otimizações</span>
                 </div>
                 <div class="noticiaBaixo">
                     <span id="imagemNoticia3Gradiente"></span>
                     <span id="imagemNoticia3"></span>
+                    <span id="imagemNoticia3Topico">Atualizações</span>
+                    <span id="imagemNoticia3Titulo">The Last of Us: Part I ganha update 1.0.5 no PC com novas otimizações</span>
                 </div>
 
             </div>
         </div>
 
         <div class="noticiaSelecionada">
+            <span id="imagemNoticiaSelecionadaGradiente"></span>
             <span id="imagemNoticiaSelecionada"></span>
         </div>
 
@@ -153,8 +158,16 @@
                 qualidade visual do game, ou obtenham mais performance com as configurações escolhidas anteriormente.
             </span>
         </div>
+
+        <!-- FOOTER-->
+    <div class="footer">
+        <span id="footerTexto">Copyright © 2023 - 2023 TLHUB. Todos os direitos reservados. | Termos de uso | Política
+            de privacidade | Definições de cookies</span>
+    </div>
     </div>
 
+
+    
 </body>
 
 </html>
