--- a/site/public/Noticias/noticia.html
+++ b/site/public/Noticias/noticia.html
@@ -8,45 +8,20 @@
     <title>Notícias | TLOUHub</title>
     <link rel="stylesheet" href="./noticia.css">
     <link rel="stylesheet" href="./mediaquery.css">
+    <script src="../js/funcoes.js"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
-    <div id='headerinfinitaFundo'>
-        <div class="headerinfinita">
-            <span id="logo">TLOU<span id="logo2">Hub</span></span>
-            <div class="navbar">
-                <div id="textonavbar">
-
-                    <div class="homepage">
-                        <span id="homepagetexto">Home</span>
-                    </div>
-
-                    <div class="noticias">
-                        <span id="noticiastextoInfinito">Notícias</span>
-                    </div>
-
-                    <div class="jogos">
-                        <span id="jogostextoInfinito">Jogos <span class="material-symbols-outlined" id="iconNavbar">
-                                arrow_drop_down
-                            </span>
-
-                    </div>
-
-                    <div class="serie">
-                        <span id="serietextoInfinito">Série
-                            <span class="material-symbols-outlined" id="iconNavbar">
-                                arrow_drop_down
-                            </span>
-                        </span>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <div id="blurAutenticacao"></div>
+    <span id="blurTexto">CADASTRE-SE PARA ACESSAR ESSE CONTÉUDO</span>
+    <span class="material-symbols-outlined" id="blurCadeado">lock</span>
+    <span id="blurCadastro">
+        <span id="blurCadastroBotao">
+            <span>Cadastrar</span>
+        </span>
+    </span>
     <div class="container">
 
         <!-- Header Normal -->
@@ -102,7 +77,8 @@
                 <span id="imagemNoticiaGradiente"></span>
                 <span id="imagemNoticia"></span>
                 <span id="imagemNoticiaTopico">Atualizações</span>
-                <span id="imagemNoticiaTitulo">The Last of Us: Part I ganha update 1.0.5 no PC com novas otimizações</span>
+                <span id="imagemNoticiaTitulo">The Last of Us: Part I ganha update 1.0.5 no PC com novas
+                    otimizações</span>
             </div>
 
             <div class="noticiaDireita">
@@ -110,13 +86,15 @@
                     <span id="imagemNoticia2Gradiente"></span>
                     <span id="imagemNoticia2"></span>
                     <span id="imagemNoticia2Topico">Atualizações</span>
-                    <span id="imagemNoticia2Titulo">The Last of Us: Part I ganha update 1.0.5 no PC com novas otimizações</span>
+                    <span id="imagemNoticia2Titulo">The Last of Us: Part I ganha update 1.0.5 no PC com novas
+                        otimizações</span>
                 </div>
                 <div class="noticiaBaixo">
                     <span id="imagemNoticia3Gradiente"></span>
                     <span id="imagemNoticia3"></span>
                     <span id="imagemNoticia3Topico">Atualizações</span>
-                    <span id="imagemNoticia3Titulo">The Last of Us: Part I ganha update 1.0.5 no PC com novas otimizações</span>
+                    <span id="imagemNoticia3Titulo">The Last of Us: Part I ganha update 1.0.5 no PC com novas
+                        otimizações</span>
                 </div>
 
             </div>
@@ -160,14 +138,16 @@
         </div>
 
         <!-- FOOTER-->
-    <div class="footer">
-        <span id="footerTexto">Copyright © 2023 - 2023 TLHUB. Todos os direitos reservados. | Termos de uso | Política
-            de privacidade | Definições de cookies</span>
-    </div>
+        <div class="footer">
+            <span id="footerTexto">Copyright © 2023 - 2023 TLHUB. Todos os direitos reservados. | Termos de uso |
+                Política
+                de privacidade | Definições de cookies</span>
+        </div>
     </div>
 
 
-    
+
 </body>
 
 </html>
+<script src="./noticia.js"></script>
