--- a/site/public/PaginaTLOU1/tlou1.html
+++ b/site/public/PaginaTLOU1/tlou1.html
@@ -116,6 +116,10 @@
             </span>
         </div>
 
+        <div id="irCima">
+            <span class="material-symbols-outlined" id="irCimaIcon">arrow_upward</span>
+        </div>
+        
         <!-- Conheça mais e Entendar Melhor-->
         <div class="parteBaixoHistoria">
             <div class="conhecaMais">
@@ -185,7 +189,7 @@
 
     <!-- DIV DO CARROSSEL DE PERSONAGENS-->
     <div class="personagemContainer">
-        <div class="personagens">
+        <div class="personagens" id="personagensCarrosel">
             <div class="slide ativa">
 
                 <div class="ellieGradiente"></div>
