Menu Jogos Homepage

--- a/site/public/PaginaInicial/home.html
+++ b/site/public/PaginaInicial/home.html
@@ -17,7 +17,21 @@
 </head>
 
 <body onload="validarSessao()">
+    <!-- Menu Flutuante Jogos-->
+    <div id="menuflutuanteJogos">
+        <span class="menuTLOU1">
+            <span id="menuTLOU1Texto">The Last of Us: Part I</span>
+        </span>
+        <span class="menuTLOU2">
+            <span id="menuTLOU2Texto">The Last of Us: Part II</span>
+        </span>
+        <span class="menuTLOULB">
+            <span id="menuTLOULBTexto">The Last of Us: Left Behind</span>
+        </span>
+        
+    </div>
 
+    
     <!-- Header Fixa -->
     <div id='headerinfinitaFundo'>
         <div class="headerinfinita">
