Adição do QUIZ de TLOU1

--- a/site/public/PaginaInicial/home.html
+++ b/site/public/PaginaInicial/home.html
@@ -36,7 +36,7 @@
                     </div>
 
                     <div class="jogos">
-                        <span id="jogostextoInfinito">Jogos <span class="material-symbols-outlined" id="iconNavbar">
+                        <span id="jogostexto">Jogos <span class="material-symbols-outlined" id="iconNavbar">
                                 arrow_drop_down
                             </span>
 
