@thigarcias Correção de bugs e adição da pagina Left Behind

--- a/site/public/PaginaInicial/home.html
+++ b/site/public/PaginaInicial/home.html
@@ -31,9 +31,9 @@
                         <span id="homepagetexto">Home</span>
                     </div>
 
-                    <div class="noticias">
+                    <!-- <div class="noticias">
                         <span id="noticiastextoInfinito">Notícias</span>
-                    </div>
+                    </div> -->
 
                     <div class="jogos">
                         <span id="jogostexto">Jogos <span class="material-symbols-outlined" id="iconNavbar">
@@ -43,11 +43,7 @@
                     </div>
 
                     <div class="serie">
-                        <span id="serietextoInfinito">Série
-                            <span class="material-symbols-outlined" id="iconNavbar">
-                                arrow_drop_down
-                            </span>
-                        </span>
+                        <span id="serietextoInfinito">Série</span>
 
                     </div>
                 </div>
@@ -70,9 +66,9 @@
                         <span id="homepagetexto">Home</span>
                     </div>
 
-                    <div class="noticias">
+                    <!-- <div class="noticias">
                         <span id="noticiastexto">Notícias</span>
-                    </div>
+                    </div> -->
 
                     <div class="jogos">
                         <span id="jogostexto">Jogos<span class="material-symbols-outlined" id="iconNavbar">
@@ -96,11 +92,7 @@
                     </div>
 
                     <div class="serie">
-                        <span id="serietexto">Série
-                            <span class="material-symbols-outlined" id="iconNavbar">
-                                arrow_drop_down
-                            </span>
-                        </span>
+                        <span id="serietexto">Série</span>
                     </div>
                     </span>
                 </div>
