--- a/site/public/PaginaTLOUHBO/hbo.html
+++ b/site/public/PaginaTLOUHBO/hbo.html
@@ -5,21 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./hbo.css">
+    <script src="../js/funcoes.js"></script>
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Document</title>
 </head>
-<body>
+<body onload="validarSessao()">
     <div class="TLOUGradiente"></div>
     <div class="TLOU"></div>
 
     <div class="container">
+
+        <div id="irCima">
+            <span class="material-symbols-outlined" id="irCimaIcon">arrow_upward</span>
+        </div>
     <!-- Header Normal -->
     <div id="header">
         <span id="logo">TLOU<span id="logo2">Hub</span></span>
         <div class="navbar">
             <div id="textonavbar">
-
                 <div class="homepage">
                     <span id="homepagetexto">Home</span>
                 </div>
@@ -36,12 +40,7 @@
                 </div>
 
                 <div class="serie">
-                    <span id="serietexto">Série
-                        <span class="material-symbols-outlined" id="iconNavbar">
-                            arrow_drop_down
-                        </span>
-                    </span>
-
+                    <span id="serietexto">Série</span>
                 </div>
                 </span>
             </div>
