Finalização da pagina de Left Behind e correção do carrossel na TLOU

--- a/site/public/PaginaInicial/home.html
+++ b/site/public/PaginaInicial/home.html
@@ -148,7 +148,7 @@
         <span id="blocoPersonagemTexto">personagens</span>
     </div>
 
-    <div class="blocoExpansaoGradiente">
+    <div class="blocoExpansaoGradiente" id="ExpansaoClick">
         <div class="blocoExpansao"></div>
         <span id="blocoExpansaoTexto">expansão</span>
     </div>
@@ -301,7 +301,7 @@
     </div>
 
     <!-- Blocos do Banner -->
-    <div class="blocoEpisodiosGradienteTLOUHBO">
+    <div class="blocoEpisodiosGradienteTLOUHBO" id="episodioClick">
         <div class="blocoEpisodiosTLOUHBO"></div>
         <span id="blocoEpisodiosTextoTLOUHBO">episódios</span>
     </div>
