--- a/site/public/PaginaTLOUHBO/hbo.html
+++ b/site/public/PaginaTLOUHBO/hbo.html
@@ -28,15 +28,25 @@
                     <span id="homepagetexto">Home</span>
                 </div>
 
-                <div class="noticias">
-                    <span id="noticiastexto">Notícias</span>
-                </div>
-
                 <div class="jogos">
                     <span id="jogostexto">Jogos<span class="material-symbols-outlined" id="iconNavbar">
                             arrow_drop_down
                         </span>
                     </span>
+                    
+                     <!-- Menu Flutuante Jogos-->
+                <div id="menuflutuanteJogos">
+                    <span class="menuTLOU1">
+                        <span id="menuTLOU1Texto">The Last of Us: Part I</span>
+                    </span>
+                    <span class="menuTLOU2">
+                        <span id="menuTLOU2Texto">The Last of Us: Part II</span>
+                    </span>
+                    <span class="menuTLOULB">
+                        <span id="menuTLOULBTexto">The Last of Us: Left Behind</span>
+                    </span>
+
+                </div>
                 </div>
 
                 <div class="serie">
@@ -144,7 +154,7 @@
         </div>
     </div>
 
-    <div class="episodios">
+    <div class="episodios" id="episodiosTodos">
             <span id="episodioTitulo">EPISÓDIOS:</span>
             <span class="material-symbols-outlined" id="episodioVoltar">arrow_back_ios</span>
             <span class="material-symbols-outlined" id="episodioProceder">arrow_back_ios</span>
