--- a/site/public/PaginaTLOULB/left.html
+++ b/site/public/PaginaTLOULB/left.html
@@ -8,6 +8,7 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Document</title>
     <link rel="stylesheet" href="left.css">
+    <link rel="stylesheet" href="mediaquerys.css">
     <script src="../js/funcoes.js"></script>
 </head>
 <body onload="validarSessao()">
