--- a/site/public/PaginaInicial/home.html
+++ b/site/public/PaginaInicial/home.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="tlou1.css">
     <link rel="stylesheet" href="tlou2.css">
     <link rel="stylesheet" href="./mediaquery.css">
+    <link rel="stylesheet" href="../PaginaTLOULB/menuflutuante.css">
     <script src="../js/funcoes.js"></script>
     <link rel="stylesheet" href="tlouhbo.css">
     <link rel="stylesheet"
@@ -18,7 +19,16 @@
 
 <body onload="validarSessao()">
 
-
+   <!-- MENU FLUTUANTE-->
+   <div class="menuflutuante">
+    <span class="blocomenuflu"></span>
+    <span class="contaLogin">CONTA</span>
+    <span class="nomeconta">Museu Ipiranga</span>
+    <span class="contaemail">museudoipiranga@ipiranga.com</span>
+    <span class="gerenciarconta">Gerenciar conta</span>
+    <span class="contalinha"></span>
+    <span class="contalogout" id="deslogar">Fazer Logout</span>
+</div>
 
     <!-- Header Fixa -->
     <div id='headerinfinitaFundo'>
@@ -108,8 +118,9 @@
                         <span id="cadastrartexto">CADASTRE-SE</span>
                     </div>
 
-                    <div class="conta" id="conta_botao">
-                        <span id="contatexto">Sair</span>
+                    <div class="idUsuario">
+                        <span id="idUsuarioTexto">id_usuario</span>
+                        <span class="material-symbols-outlined" id="iconUsuario">arrow_drop_down</span>
                     </div>
                 </div>
             </div>
