Funcionamento Pagina Gerenciar e validação de resposta no Quiz

--- a/site/public/PaginaInicial/home.html
+++ b/site/public/PaginaInicial/home.html
@@ -34,11 +34,11 @@
     <div id='headerinfinitaFundo'>
         <div class="headerinfinita">
             <span id="logo">TLOU<span id="logo2">Hub</span></span>
-            <div class="navbar">
+            <div class="navbarInfinito">
                 <div id="textonavbarInfinito">
 
                     <div class="homepage">
-                        <span id="homepagetexto">Home</span>
+                        <span id="homepagetextoInfinito">Home</span>
                     </div>
 
                     <!-- <div class="noticias">
