--- a/site/public/PaginaTLOUHBO/hbo.html
+++ b/site/public/PaginaTLOUHBO/hbo.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./hbo.css">
     <script src="../js/funcoes.js"></script>
     <link rel="stylesheet" href="./mediaquerys.css">
+    <link rel="stylesheet" href="../PaginaTLOULB/menuflutuante.css">
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Document</title>
@@ -14,6 +15,28 @@
 <body onload="validarSessao()">
     <div class="TLOUGradiente"></div>
     <div class="TLOU"></div>
+
+       <!-- MENU FLUTUANTE-->
+       <div class="menuflutuante">
+        <span class="blocomenuflu"></span>
+        <span class="contaLogin">CONTA</span>
+        <span class="nomeconta">Museu Ipiranga</span>
+        <span class="contaemail">museudoipiranga@ipiranga.com</span>
+        <span class="gerenciarconta">Gerenciar conta</span>
+        <span class="contalinha"></span>
+        <span class="contalogout" id="deslogar">Fazer Logout</span>
+    </div>
+
+
+        <div class="menuflutuante">
+        <span class="blocomenuflu"></span>
+        <span class="contaLogin">CONTA</span>
+        <span class="nomeconta">Museu Ipiranga</span>
+        <span class="contaemail">museudoipiranga@ipiranga.com</span>
+        <span class="gerenciarconta">Gerenciar conta</span>
+        <span class="contalinha"></span>
+        <span class="contalogout" id="deslogar">Fazer Logout</span>
+    </div>
 
     <div class="container">
 
@@ -66,8 +89,10 @@
                 <span id="cadastrartexto">CADASTRE-SE</span>
             </div>
 
-            <div class="conta" id="conta_botao">
-                <span id="contatexto">Sair</span>
+
+            <div class="idUsuario">
+                <span id="idUsuarioTexto">id_usuario</span>
+                <span class="material-symbols-outlined" id="iconUsuario">arrow_drop_down</span>
             </div>
         </div>
     </div>
