--- a/site/public/PaginaTLOUHBO/hbo.html
+++ b/site/public/PaginaTLOUHBO/hbo.html
@@ -267,8 +267,42 @@
                 O Cordyceps inspirou a criação do universo de The Last of Us, no qual uma mutação do fungo infecta humanos e transforma-os em criaturas violentas e perigosas. No jogo, o fungo é altamente contagioso e pode ser transmitido através de esporos que se espalham pelo ar, tornando-o extremamente perigoso para a população humana.
                 Ele é fascinante por sua capacidade de infectar e controlar a mente de seu hospedeiro, alterando seu comportamento para atender aos interesses do fungo. Embora a versão fictícia do fungo em The Last of Us seja altamente exagerada e perigosa, a inspiração biológica por trás do fungo é um exemplo interessante de como a natureza pode inspirar a ficção científica.</span>
         </div>
+        <div class="curtida">
+            <span class="material-symbols-outlined" id="curtidaIcon">favorite</span>
+            <span id="curtidaTexto">CURTA SE FOR SEU EP FAVORITO!</span>
+        </div>
     </div>
 
+    <div class="ranking">
+        <span id="tituloRanking">RANKING DE EPISÓDIOS (LIKES)</span>
+        <div class="rankingConteudo">
+            <div class="rankingPosicao">
+                <span id="posicao">1°</span>
+                <span id="imagemPosicao"></span>
+                <span id="textoPosicao">EPISÓDIO 1</span>
+            </div>
+            <div class="rankingPosicao">
+                <span id="posicao">1°</span>
+                <span id="imagemPosicao"></span>
+                <span id="textoPosicao">EPISÓDIO 1</span>
+            </div>
+            <div class="rankingPosicao">
+                <span id="posicao">1°</span>
+                <span id="imagemPosicao"></span>
+                <span id="textoPosicao">EPISÓDIO 1</span>
+            </div>
+            <div class="rankingPosicao">
+                <span id="posicao">1°</span>
+                <span id="imagemPosicao"></span>
+                <span id="textoPosicao">EPISÓDIO 1</span>
+            </div>
+            <div class="rankingPosicao">
+                <span id="posicao">1°</span>
+                <span id="imagemPosicao"></span>
+                <span id="textoPosicao">EPISÓDIO 1</span>
+            </div>
+        </div>
+    </div>
      <!-- FOOTER-->
      <div class="footer">
         <span id="footerTexto">Copyright © 2023 - 2023 TLHUB. Todos os direitos reservados. | Termos de uso |
