--- a/site/public/PaginaTLOUHBO/hbo.html
+++ b/site/public/PaginaTLOUHBO/hbo.html
@@ -12,7 +12,7 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Document</title>
 </head>
-<body onload="validarSessao()">
+<body>
     <div class="TLOUGradiente"></div>
     <div class="TLOU"></div>
 
