Finalizacao da pagina de Gerenciar COnta

--- a/site/public/GerenciarConta/gerenciar.html
+++ b/site/public/GerenciarConta/gerenciar.html
@@ -37,6 +37,7 @@
                     </span>
                     
                 </div>
+                <button id="btn_alterarSenha" onclick="atualizarDados()">SALVAR</button>
             </div>
         </div>
 
@@ -66,8 +67,8 @@
 
                     <span id="senhaNovaConfirmar">CONFIRMAR SENHA NOVA</span>
                     <input type="password" id="i_senhanovaconfirmar">
-
-                    <button id="btn_alterarSenha" onclick="atualizarDados()">SALVAR</button>
+                    <span id="msgErro"></span>
+                    <button id="btn_alterarSenha" onclick="atualizarEmailSenha()">SALVAR</button>
                 </div>
         </div>
 
