--- a/site/public/PaginaInicial/home.html
+++ b/site/public/PaginaInicial/home.html
@@ -251,6 +251,7 @@
 
 
     <!-- Blocos do Banner -->
+    <div class="blocosTLOU2">
     <div class="blocoHistoriaGradienteTLOU2">
         <div class="blocoHistoriaTLOU2"></div>
         <span id="blocoHistoriaTextoTLOU2">história</span>
@@ -260,6 +261,7 @@
         <div class="blocoPersonagemTLOU2"></div>
         <span id="blocoPersonagemTextoTLOU2">personagens</span>
     </div>
+</div>
 
     <div class="containerTLOUinformativoTLOU2">
         <span id="tituloInformativoTLOU2">O QUE VOCÊ PRECISA SABER?</span>
