Atualização CSS pagina Inicial

--- a/site/public/PaginaInicial/home.html
+++ b/site/public/PaginaInicial/home.html
@@ -314,10 +314,12 @@
     </div>
 
     <!-- Blocos do Banner -->
+    <div class="blocosTLOUHBO">
     <div class="blocoEpisodiosGradienteTLOUHBO" id="episodioClick">
         <div class="blocoEpisodiosTLOUHBO"></div>
         <span id="blocoEpisodiosTextoTLOUHBO">episódios</span>
     </div>
+</div>
 
     <div class="containerTLOUinformativoTLOUHBO">
         <span id="tituloInformativoTLOUHBO">O QUE VOCÊ PRECISA SABER?</span>
